--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@storybook/addon-docs": "^9.1.6",
     "@storybook/addon-vitest": "^9.1.6",
     "@storybook/react-vite": "^9.1.6",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.5",
+    "playwright": "^1.55.0",
     "prop-types": "^15.8.1",
     "storybook": "^9.1.6",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.55.0",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
